14 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Added a
 new method (getAnnotationPresentableId), which tries to return a more "user
 friently" id.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts
 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.html
 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.ts:
 New functionality regarding overlapping annotations: Now, the "smallest"
 annotation under the mouse is selected. If more than one, successive clicks
 iterate over all "small" annotations.

 * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
 Fixed a bug in button selection login, where previsously selected button were
 not deselected if selected from the overlapping area selection widget.

 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.html:
 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/services/text-widget/text-widget.service.ts:
 * clarin-angular/src/css/clarin-material.scss: Fixed overlaping area
 selection, and added pre-selection for some cases.

12 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/controls/annotator-widget/annotator-widget.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-btn/coref-btn.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/ng-matero/core/bootstrap/menu.service.ts:
 * clarin-angular/src/app/ng-matero/shared/components/error-code/_long-shadow.scss: