@@ -1,55 +1,42 @@
 <div class="annotation-visualiser">
   <as-split direction="vertical" style="height: 100%;">
-    <as-split-area [size]="30" [minSize]="10" [maxSize]="90" class="annotation-list">
+    <as-split-area [size]="50" [minSize]="10" [maxSize]="90" class="annotation-list">
       <table #annvisannlist mat-table [dataSource]="annotationsDataSource" ngClass="annotation-visualiser-container">
-        <!-- ID Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">{{annotation._id}}</td>
+          <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">{{TextWidgetAPI.getAnnotationPresentableId(annotation)}}</td>
         </ng-container>
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef>Type</th>
           <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">{{annotation.type}}</td>
         </ng-container>
-        <ng-container matColumnDef="span">
-          <th mat-header-cell *matHeaderCellDef>Span</th>
+        <ng-container matColumnDef="spans">
+          <th mat-header-cell *matHeaderCellDef>Spans</th>
           <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">
             {{annotation.spans[0].start}}:{{annotation.spans[0].end}}</td>
         </ng-container>
-        <tr mat-header-row *matHeaderRowDef="annotationListDisplayedColumns"></tr>
-        <tr mat-row (click)="setSelectedAnnotation(row, i)" [ngClass]="{ active: i == selectedIndex }"
-          *matRowDef="let row; let i = index; columns: annotationListDisplayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="annotationListDisplayedColumns; sticky: true"></tr>
+        <tr mat-row (click)="setSelectedAnnotation(row)" [ngClass]="{ selected: row._id == selectedIndex }"
+          *matRowDef="let row; columns: annotationListDisplayedColumns;"
+	  class="annotation-row"></tr>
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell">No data matching the filter</td>
         </tr>
       </table>
     </as-split-area>
-    <as-split-area [size]="70" [minSize]="10" [maxSize]="90" class="annotation-info">
-      <div class="annotation-visualiser-header">
-        <div class="col-md-3 right-divider">Name</div>
-        <div class="col-md-9">Value</div>
-      </div>
-      <div class="annotation-visualiser-content">
-        <div class="col-md-3 right-divider overflow-ellipsis">Type</div>
-        <div class="col-md-9 overflow-ellipsis">{{selectedAnnotation.type}}</div>
-      </div>
-      <div class="annotation-visualiser-content">
-        <div class="col-md-3 right-divider overflow-ellipsis">Annotator ID</div>
-        <div class="col-md-9 overflow-ellipsis">{{selectedAnnotation.annotator_id}}</div>
-      </div>
-      <div class="annotation-visualiser-content">
-        <div class="col-md-3 right-divider overflow-ellipsis">Document Attribute</div>
-        <div class="col-md-9 overflow-ellipsis">{{selectedAnnotation.document_attribute}}</div>
-      </div>
-      <div class="annotation-visualiser-content" *ngFor="let span of selectedAnnotation.spans; let i = index">
-        <div class="col-md-3 right-divider overflow-ellipsis"><span *ngIf="i==1">Spans</span>&nbsp;</div>
-        <div class="col-md-9 overflow-ellipsis" title="{{span.segment}}">{{span.start}}:{{span.end}}
-          ["{{span.segment}}"]</div>
-      </div>
-      <div class="annotation-visualiser-content" *ngFor="let attribute of selectedAnnotation.attributes; let i = index">
-        <div class="col-md-3 right-divider overflow-ellipsis"><span *ngIf="i==0">Attributes</span>&nbsp;</div>
-        <div class="col-md-9 overflow-ellipsis">{{attribute.name}} &nbsp;-&nbsp; "{{attribute.value}}"</div>
-      </div>
+    <as-split-area [size]="50" [minSize]="10" [maxSize]="90" class="annotation-info">
+      <table #annvisselann mat-table [dataSource]="selectedAnnotationDataSource" ngClass="annotation-visualiser-info-container">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let property" class="overflow-ellipsis">{{property.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="value">
+          <th mat-header-cell *matHeaderCellDef>Value</th>
+          <td mat-cell *matCellDef="let property" class="overflow-ellipsis">{{property.value}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="selectedAannotationDisplayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: selectedAannotationDisplayedColumns;"></tr>
+      </table>
     </as-split-area>
   </as-split>
 </div>
