@@ -1,3 +1,7 @@
+@import '~@angular/material/theming';
+$background: map-get($theme, background);
+$foreground: map-get($theme, foreground);
+
 /* Used by all splitters: */
 // https://github.com/angular-split/angular-split/issues/224
 .as-split-gutter {
@@ -213,15 +217,32 @@
   overflow: auto;
   width: 100%;
   height: 100%;
-  .annotation-visualiser-container {
-    width: 100%;
-    .mat-header-row {
-      height: 33px;
-      .mat-header-cell {
-        text-align: center;
-        font-weight: bold;
-        font-size: 13px;
-        line-height: 13px;
+  .annotation-list, .annotation-info {
+     overflow-x: auto !important;
+     overflow-y: auto !important;
+    .annotation-visualiser-container,
+    .annotation-visualiser-info-container {
+      width: 100%;
+      .selected {
+        background-color: mat-color($accent, default);
+        .mat-cell {
+          color: mat-color($accent, default-contrast);
+          // font-weight: bold;
+        }
+      }
+      .annotation-row {
+        &:not(.selected):hover {
+          background-color: mat-color($background, hover); //whitesmoke;
+        }
+      }
+      .mat-header-row {
+        height: 33px;
+        .mat-header-cell {
+          text-align: center;
+          font-weight: bold;
+          font-size:   13px;
+          line-height: 13px;
+        }
       }
     }
   }
