@@ -1,4 +1,10 @@
 14 July 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.html:
+ * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
+ * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
+ * clarin-angular/src/css/clarin-material.scss: Fixed Annotation Visualiser
+ component.
+
  * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Added a
  new method (getAnnotationPresentableId), which tries to return a more "user
  friently" id.
